<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/fragment_horizontal_margin"
    android:paddingVertical="@dimen/fragment_vertical_margin"
    tools:context=".ui.startAppPager.login.LoginFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_backpage"
            android:text="@string/login"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableStart="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50dp"
            android:text="@string/login_sub_text"
            android:textSize="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_backpage" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:hint="@string/prompt_id"
            app:counterMaxLength="20"
            app:endIconMode="clear_text"
            android:backgroundTint="@color/basic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtext">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_or_id"
                android:inputType="textEmailAddress"
                android:maxLength="20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            app:counterMaxLength="20"
            app:endIconMode="password_toggle"
            app:helperTextTextColor="@color/red"
            android:backgroundTint="@color/basic"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_layout_login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="20"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_layout_login">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/autoLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/login_checkbox_custom"
                android:buttonTint="?attr/colorPrimary"
                android:text="@string/auto_login" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/saveId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/login_checkbox_custom"
                android:buttonTint="?attr/colorPrimary"
                android:text="@string/save_id" />
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_ok"
            android:backgroundTint="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_ok">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/naverbtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/login_button_custom"
                android:drawableLeft="@drawable/naver_resize"
                android:gravity="center_vertical"
                android:paddingVertical="10dp"
                android:paddingLeft="50dp"
                android:text="@string/naver_login" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/googlebtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@drawable/login_button_custom"
                android:drawableStart="@drawable/google_resize"
                android:gravity="center_vertical"
                android:paddingLeft="50dp"
                android:text="@string/google_login" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/signup"
            android:text="@string/signup"
            android:gravity="center"
            android:layout_marginVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/signup">
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/email_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_search"
                android:textColor="@color/sign_search"/>
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/password_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_search"
                android:textColor="@color/sign_search"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>