<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/test_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.startAppPager.splash.SplashFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/splash"
        android:padding="30dp"
        android:background="@color/background_cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background_text"
            android:layout_marginBottom="@dimen/text_margin"
            android:textSize="40dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background_text_with"
            android:layout_marginBottom="@dimen/text_margin"
            android:textSize="30dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background_text_comment"
            android:textSize="20dp"
            android:layout_marginBottom="@dimen/text_margin"
            app:layout_constraintBottom_toTopOf="@+id/loading"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:progressDrawable="@drawable/splash_progressbar"
            android:layout_marginBottom="@dimen/text_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/next_login"
            android:layout_width="@dimen/vector_size"
            android:layout_height="@dimen/vector_size"
            android:src="@drawable/next_login_pager"
            android:layout_marginBottom="@dimen/text_margin"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.799" />

        <TextView
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:textSize="20dp"
            android:text="loading ..."
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
